fix select styling on firefox

--- a/app/assets/stylesheets/components/_input-search.scss
+++ b/app/assets/stylesheets/components/_input-search.scss
@@ -238,6 +238,12 @@ input.search-input:-webkit-autofill {
   @include rounded-except(none);
 }
 
+@-moz-document url-prefix() {
+  select {
+      padding-top: 10px;
+  }
+}
+
 .label_tag{
   font-size: 35px;
   color: orange;
